--- a/web/data/cubicweb.css
+++ b/web/data/cubicweb.css
@@ -18,7 +18,7 @@ body {
 h1, h2, h3 { margin-top:0; margin-bottom:0; }
 
 /* got rhythm ? beat of 12*1.25 = 15 px */
-.rhythm_bg { background: url(/data/%(baseRhythmBg)s) repeat ! important; }
+.rhythm_bg { background: url("%(baseRhythmBg)s") repeat ! important; }
 
 /* scale 3:5 stranded */
 /* h1 { font-size:2em; } */
