[css] set 100% width/height on image from idownloadable primary view

--- a/web/data/cubicweb.css
+++ b/web/data/cubicweb.css
@@ -91,7 +91,7 @@ p {
 }
 
 ul {
-   margin-bottom: %(defaultLineHeightEm)s;
+  margin-bottom: %(defaultLineHeightEm)s;
 }
 
 ol {
@@ -114,7 +114,12 @@ li {
 }
 
 img{
- border: none;
+  border: none;
+}
+
+img.contentimage {
+  width: 100%;
+  height: 100%;
 }
 
 fieldset {
