--- a/web/data/cubicweb.css
+++ b/web/data/cubicweb.css
@@ -537,6 +537,7 @@ div.ctxtoolbar {
   float: right;
   padding-left: 24px;
   position: relative;
+  z-index: 10;
 }
 div.toolbarButton {
   display: inline;
