[boxes] introduce new boxes system
* separate box content generation from its layout
* refactor css classes to allow moving boxes and still get consistent ui

On the way to contentnavigation/boxes unification (in a later patch)
* * *
some fixes for the previous (default_new_boxes_system) patch
* * *
some fixes for the previous (default_new_boxes_system) patch

--- a/web/data/cubicweb.calendar.css
+++ b/web/data/cubicweb.calendar.css
@@ -230,7 +230,7 @@ td.calendar table {
 .calendar th.month {
  font-weight:bold;
  padding-bottom:0.2em;
- background: %(actionBoxTitleBgColor)s;
+ background: %(incontextBoxBodyBgColor)s;
 }
 
 .calendar th.month a{
