--- a/web/data/cubicweb.tableview.css
+++ b/web/data/cubicweb.tableview.css
@@ -6,7 +6,7 @@ table.filter th {
   font-weight: bold;
   background: #ebe8d9 url("button.png") repeat-x;
   padding: 0.3em;
-  border-bottom: 1px solid %(actionBoxTitleBgColor)s;
+  border-bottom: 1px solid %(incontextBoxBodyBgColor)s;
   text-align: left;
 }
 
