--- a/web/data/cubicweb.old.css
+++ b/web/data/cubicweb.old.css
@@ -860,3 +860,16 @@ div#footer a {
 .otherView {
   float: right;
 }
+
+
+/******************************/
+/* reledit                    */
+/******************************/
+
+.releditField {
+    display: inline;
+}
+
+.releditForm {
+ display:none;
+}
