add some styling required by ReST figures

--- a/web/data/cubicweb.css
+++ b/web/data/cubicweb.css
@@ -198,6 +198,18 @@ li.invisible div{
   display: inline;
 }
 
+.caption {
+    font-weight: bold;
+}
+
+.legend{
+    font-style: italic;
+}
+
+.align-center{
+    text-align: center;
+}
+
 /***************************************/
 /*   LAYOUT                            */
 /***************************************/
