[javascript] update to jQuery 1.4.2 and jQuery-ui 1.8.5
The most notable changes are :

- A bug in jQuery 1.4.2 forces us to add 2 noop() methods
  on cw objects to handle event unbinding, see :
    http://dev.jquery.com/ticket/6184
  for more details.

- jquery.autocomplete.js is not maintained anymore as it now has
  a standard implementation in jquery ui. The downside is that
  the new autocomplete version needs more work to be used.
  cubicweb.widgets.js defines a cwautocomplete plugin which is
  just a (not so) thin wrapper around the std autocomplete plugin
  to keep backward compatibility and usage simplicty.
  The original autocomplete author wrote a nice migration guide :
  http://www.learningjquery.com/2010/06/autocomplete-migration-guide

- If you're using jQuery.ajax directly, you might have surprises
  with arguments serialization for arrays. To get the old behaviour,
  you need to pass a `traditional: true` extra arguments to jQuery.ajax.
  Of course, it's transparent if you're using cubicweb higher level
  helpers such as loadxhtml, loadRemote, etc.

--- a/web/data/cubicweb.css
+++ b/web/data/cubicweb.css
@@ -970,6 +970,11 @@ img.align-left {
 /* overwite other css here      */
 /********************************/
 
+.ui-menu li.ui-menu-item {
+  /* remove background image (orange bullet) for autocomplete suggestions */
+  background-image: none;
+}
+
 /* ui.tabs.css */
 ul.ui-tabs-nav,
 div.ui-tabs-panel {
