--- a/web/data/cubicweb.css
+++ b/web/data/cubicweb.css
@@ -471,8 +471,11 @@ ul.boxListing ul {
 
 ul.boxListing a {
   color: %(defaultColor)s;
-  display: block;
   padding: 1px 9px 1px 3px;
+}
+
+ul.boxListing a.action {
+  padding: 0;
 }
 
 ul.boxListing li {
@@ -531,12 +534,7 @@ a.popupMenu {
   background: #f0eff0 url("gradient-grey-up.png") left top repeat-x;
 }
 
-.bookmarks_box ul.boxListing div a{
-  background: #fff;
-  display: inline;
-  padding: 0;
-}
-.bookmarks_box ul.boxListing div a:hover{
+.bookmarks_box ul.boxListing div a:hover {
   border-bottom: 1px solid #000;
 }
 
