[boxes] use a new separator instead of clumsy htmlwidget's one which close and reopen the <ul> (loosing any list class on  the way)

--- a/web/data/cubicweb.old.css
+++ b/web/data/cubicweb.old.css
@@ -438,6 +438,11 @@ div.boxBody a:hover {
   background-color: %(leftrightBoxBodyHoverBgColor)s;
 }
 
+hr.boxSeparator {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+
 /* boxes contextual customization */
 
 .contextFreeBox div.boxTitle {
