--- a/web/data/cubicweb.ie.css
+++ b/web/data/cubicweb.ie.css
@@ -4,10 +4,20 @@ div.calpopup {
   margin-top: 0px;
 }
 
+table#header td#header-right  div.popupWrapper {
+  position: relative;
+  z-index: 400;
+}
+
+table#header td#header-right{
+  text-align:right;
+}
+
 /* quick and dirty solution for pop to be
    correctly displayed on right edge of window */
 div.popupWrapper{
   direction:rtl;
+  text-align:right;
 }
 
 div#rqlinput input.rqlsubmit{
