--- a/skeleton/__pkginfo__.py.tmpl
+++ b/skeleton/__pkginfo__.py.tmpl
@@ -1,4 +1,4 @@
-# pylint: disable-msg=W0622
+# pylint: disable=W0622
 """%(distname)s application packaging information"""
 
 modname = '%(cubename)s'
