--- a/web/data/cubicweb.css
+++ b/web/data/cubicweb.css
@@ -1,6 +1,6 @@
 /*
  *  :organization: Logilab
- *  :copyright: 2003-2010 LOGILAB S.A. (Paris, FRANCE), all rights reserved.
+ *  :copyright: 2003-2011 LOGILAB S.A. (Paris, FRANCE), all rights reserved.
  *  :contact: http://www.logilab.fr/ -- mailto:contact@logilab.fr
  */
 
@@ -220,7 +220,7 @@ li.invisible div{
 /* header */
 
 table#header {
-  background: %(headerBgColor)s url("banner.png") repeat-x top left;
+  background: %(headerBg)s;
   width: 100%;
 }
 
