[facets] mark titles of active facets with red dot (closes #1624857)

--- a/web/data/cubicweb.facets.css
+++ b/web/data/cubicweb.facets.css
@@ -117,3 +117,7 @@ div#facetLoading {
   font-weight:    bold;
   text-align:     center;
 }
+
+div.facetTitleSelected {
+  background: url("required.png") no-repeat right top;
+}
