--- a/web/data/cubicweb.css
+++ b/web/data/cubicweb.css
@@ -993,23 +993,49 @@ img.align-left {
   background-image: none;
 }
 
-/* ui.tabs.css */
-ul.ui-tabs-nav,
-div.ui-tabs-panel {
+/* jquery-ui tabs */
+
+div.ui-tabs.ui-widget-content {
+  background:none;
+  border:none;
+  color:inherit;
+}
+
+div.ui-tabs ul.ui-tabs-nav {
+  padding-left: 0.5em;
+}
+
+div.ui-tabs ul.ui-tabs-nav a {
+  color:#27537A;
+  padding: 0.3em 0.6em;
+}
+
+div.ui-tabs ul.ui-tabs-nav li.ui-tabs-selected a {
+  color:black;
+}
+
+div.ui-tabs ul.ui-tabs-nav li.ui-state-hover {
+  background:none;
+}
+
+div.ui-tabs .ui-widget-header {
+  background:none;
+  border:none;
+}
+
+div.ui-tabs .ui-widget-header li {
+  border-color:#333333;
+}
+
+div.ui-tabs .ui-tabs-panel {
+  border-top:1px solid #97A5B0;
+  padding-left:0.5em;
+  color:inherit;
+}
+
+div.ui-tabs .ui-tabs-nav, div.ui-tabs .ui-tabs-panel {
   font-family: %(defaultFontFamily)s;
   font-size: %(defaultSize)s;
-}
-
-div.ui-tabs-panel {
-  border-top:1px solid #b6b6b6;
-}
-
-ul.ui-tabs-nav a {
-  color: #3d3d3d;
-}
-
-ul.ui-tabs-nav a:hover {
-  color: #000;
 }
 
 img.ui-datepicker-trigger {
