[css] repair selected slice distinctiveness (with a nice, discrete bg color)

--- a/web/data/cubicweb.old.css
+++ b/web/data/cubicweb.old.css
@@ -625,7 +625,7 @@ span.slice a:hover{
 
 span.selectedSlice a:visited,
 span.selectedSlice a {
-  color: #000;
+  background-color: #EBE8D9;
 }
 
 /* FIXME should be moved to cubes/folder */
