[facets/table] vertically group facets by two when possible in order to have a more compact horizontal layout in table filter form

--- a/web/data/cubicweb.facets.css
+++ b/web/data/cubicweb.facets.css
@@ -121,3 +121,13 @@ div#facetLoading {
 div.facetTitleSelected {
   background: url("required.png") no-repeat right top;
 }
+
+table.filter {
+  background-color: #EBE8D9;
+  border: dotted grey 1px;
+}
+
+div.facet {
+ padding: none;
+ margin: .3em!important;
+}
