[skel] drop unused import

--- a/skeleton/__pkginfo__.py.tmpl
+++ b/skeleton/__pkginfo__.py.tmpl
@@ -18,7 +18,7 @@ __recommends__ = {}
 
 
 from os import listdir as _listdir
-from os.path import join, isdir, exists
+from os.path import join, isdir
 from glob import glob
 
 THIS_CUBE_DIR = join('share', 'cubicweb', 'cubes', modname)
