--- a/web/data/cubicweb.old.css
+++ b/web/data/cubicweb.old.css
@@ -24,7 +24,7 @@ body {
 
 h1,
 .vtitle {
-  font-size: 188%;
+  font-size: %(h1FontSize)s;
   margin: 0.2em 0px 0.3em;
   border-bottom: 1px solid #000;
 }
@@ -35,11 +35,11 @@ h2, h3 {
 }
 
 h2 {
-  font-size: 135%;
+  font-size: %(h2FontSize)s;
 }
 
 h3 {
-  font-size: 130%;
+  font-size: %(h3FontSize)s;
 }
 
 h4 {
