--- a/web/data/cubicweb.facets.css
+++ b/web/data/cubicweb.facets.css
@@ -4,17 +4,16 @@
 }
 
 div.facet {
- margin-bottom: 8px;
  background: #fff;
  padding: 5px;
- min-width: 10em;
+ margin: .3em!important;
 }
 
 div.facetTitle, div.bkSearch  {
- font-size: 80%;
  color: #000;
  margin-bottom: 2px;
  cursor: pointer;
+ font-weight: bold;
  font: %(facet_titleFont)s;
 }
 
@@ -23,45 +22,41 @@ div.facetTitle a {
  background: transparent url("puce.png") 0% 50% no-repeat;
  }
 
-div.facetBody {
-}
-
-.opened{
+.opened {
  color: #000 !important;
 }
 
-div.overflowed {
+div.vocabularyFacetBody {
   height: %(facet_overflowedHeight)s;
+}
+
+div.vocabularyFacetBodyWithLogicalSelector {
+  height: %(facet_overflowedHeightWithLogicalSelector)s;
+}
+
+div.vocabularyFacet {
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 div.facetCheckBox {
   clear: both;
   cursor: pointer;
-}
-
-div.facetCheckBox a {
- text-decoration: none;
- font-size: 85%;
+  text-decoration: none;
 }
 
 div.facetValue{
-clear: both
+  padding-left: 2px;
+  clear: both
 }
 
-div.facetValue img{
- float: left;
- background: #fff;
+div.facetValue img {
+  float: left;
+  background: #fff;
 }
 
-div.facetValue a {
- margin-left: 20px;
- display: block;
- margin-top: -6px; /* FIXME why do we need this ? */
-}
-
-div.facetValueSelected a {
-  font-weight: bold;
+div.facetValueSelected {
+  background: #EBE8D9;
 }
 
 #leftcol label {
@@ -77,34 +72,25 @@ div#filter_box {
   border: none;
 }
 
-
-div.facetCheckBox{
- line-height:0.8em;
- }
-
 .facet input{
  margin-top:3px;
  border:1px solid #ccc;
  font-size:11px;
- }
+}
 
-
-.facetValueDisabled {
+.facetValueDisabled span {
   font-style: italic;
   text-decoration: line-through;
 }
-
 
 div#filterboxTitle {
   margin-top: 50px;
   margin-bottom: 1em;
   color: #1190A1;
   font-size: 75%;
-  font-weight: bold;
   padding: 0.15em;
   text-transform: uppercase;
 }
-
 
 div#facetLoading {
   display: none;
@@ -125,9 +111,4 @@ div.facetTitleSelected {
 table.filter {
   background-color: #EBE8D9;
   border: dotted grey 1px;
-}
-
-div.facet {
- padding: none;
- margin: .3em!important;
 }
