[skel] default debian/rules use pysupport to compile python files
Drop the unused python-dev build-dependency (only necessary for binary extensions)

--- a/skeleton/debian/control.tmpl
+++ b/skeleton/debian/control.tmpl
@@ -2,7 +2,7 @@ Source: %(distname)s
 Section: web
 Priority: optional
 Maintainer: %(author)s <%(author-email)s>
-Build-Depends: debhelper (>= 5.0.37.1), python (>=2.4), python-dev (>=2.4)
+Build-Depends: debhelper (>= 5.0.37.1), python (>=2.4), python-support
 Standards-Version: 3.8.0
 
 
