[css] use listingHeaderBgColor in old css
this also fix inconsistency between background image / bg color

--- a/web/data/cubicweb.old.css
+++ b/web/data/cubicweb.old.css
@@ -813,7 +813,7 @@ table.listing td {
 
 table.listing th {
   font-weight: bold;
-  background: #ebe8d9 url("button.png") repeat-x;
+  background: %(listingHeaderBgColor)s;
 }
 
 table.listing td a,
