([config] add file encoding information to python files (closes #1942655)

--- a/skeleton/entities.py.tmpl
+++ b/skeleton/entities.py.tmpl
@@ -1,3 +1,4 @@
+# -*- coding: utf-8 -*-
 # copyright %(year)s %(author)s, all rights reserved.
 # contact %(author-web-site)s -- mailto:%(author-email)s
 #
