--- a/skeleton/uiprops.py.tmpl
+++ b/skeleton/uiprops.py.tmpl
@@ -1,3 +1,4 @@
+# -*- coding: utf-8 -*-
 ###############################################################################
 #
 # Put here information about external resources / styles used by your cube,
