--- a/skeleton/schema.py.tmpl
+++ b/skeleton/schema.py.tmpl
@@ -1,3 +1,4 @@
+# -*- coding: utf-8 -*-
 # copyright %(year)s %(author)s, all rights reserved.
 # contact %(author-web-site)s -- mailto:%(author-email)s
 #
