--- a/web/data/cubicweb.old.css
+++ b/web/data/cubicweb.old.css
@@ -161,6 +161,9 @@ pre {
   color: #000;
   background-color: #f2f2f2;
   border: 1px solid #ccc;
+  margin: 10px 0;
+  padding-bottom: 12px;
+  padding-left: 5px;
 }
 
 code {
